# suspicious-tweets-detection

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  train_test.py
.github/workflows/: train_test.yaml
src/: __init__.py  settings.py
src/data_loaders/: __init__.py  data_loader.py
src/models/: __init__.py  model.py  random_forest.py  word2vec.py
src/preprocessors/: __init__.py  functions.py
tests/: test_dataloader.py
