[tool.poetry]
name = "suspicious-tweets-detection"
version = "0.1.0"
description = ""
authors = ["abdoulfataoh <abdoulfataoh@gmail.com>"]
readme = "README.md"
packages = [{include = "suspicious_tweets_detection"}]

[tool.poetry.dependencies]
python = "^3.10"
gdown = "^4.6.3"
pandas = "^1.5.3"
flake8 = "^6.0.0"
scikit-learn = "^1.2.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.0.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
